[package]
name = "protocol-z-cash"
version = "0.1.0"
authors = [
    "Jack Grigg <jack@electriccoin.co>",
]
license = "MIT OR Apache-2.0"
edition = "2021"
publish = false

[dependencies]
# Webserver
axum = "0.7"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version="0.3", features = ["env-filter"] }

# Domain redirection
pin-project-lite = "0.2"
tower = "0.4"

# Templates
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"
